# internal/repository/models.go
@@ -1,0 +1,22 @@
+// Code generated by sqlc. DO NOT EDIT.
+// versions:
+//   sqlc v1.30.0
+
+package repository
+
+import (
+	"time"
+
+	"github.com/google/uuid"
+)
+
+type Badge struct {
+	ID        uuid.UUID `json:"id"`
+	TokenHash string    `json:"token_hash"`
+	Subject   string    `json:"subject"`
+	Status    string    `json:"status"`
+	Color     string    `json:"color"`
+	Style     string    `json:"style"`
+	CreatedAt time.Time `json:"created_at"`
+	UpdatedAt time.Time `json:"updated_at"`
+}
